tests/ui/item_is_not_a_struct.rs
use dbstruct::dbstruct;

#[dbstruct]
fn F() {}

fn main() {}
